# tinysim

./: CMakeLists.txt  README.md  tinysim.sh
analyze/: plotLog.py
include/: control.h  controls.h  filters.h  fusion.h  geometry.h  parameters.h  physics.h  sensors.h
src/: main.cpp
src/control/: attTiltPrioCtrl.cpp
src/controls/: altPIDCtrl.cpp  attRateIndiCtrl.cpp  attTiltPrioCtrl.cpp  posPIDCtrl.cpp
src/filters/: smoothFilt.cpp
src/flatness/: diffFlat.cpp
src/fusion/: kalman.cpp
src/geometry/: so3.cpp
src/parameters/: parameters_fusion.cpp  parameters_geometry.cpp  parameters_phy.cpp  parametes.cpp  parametes_drone.cpp
src/physics/: rigid.cpp
src/sensors/: baro.cpp  imu.cpp
